Make Batch Job monitoring URL configurable from env var

--- a/.env.sample
+++ b/.env.sample
@@ -5,49 +5,50 @@ DATABASE_PASSWORD=merlin
 DATABASE_NAME=merlin
 
 SENTRY_ENABLED=true
-SENTRY_DSN=[*** PASTE SENTRY DSN ****]
+# SENTRY_DSN=
 
 REACT_APP_HOMEPAGE=/merlin
-REACT_APP_MERLIN_API=http://localhost:8080/v1
+REACT_APP_MERLIN_API=http://localhost:3000/v1
 REACT_APP_OAUTH_CLIENT_ID=
-REACT_APP_ALERT_ENABLED=false
-REACT_APP_MONITORING_DASHBOARD_ENABLED=false
-REACT_APP_MLP_API=http://mlp.dev/api/v1
+REACT_APP_MLP_API=http://localhost:3001/v1
 
-NEWRELIC_ENABLED=true
+NEWRELIC_ENABLED=false
 NEWRELIC_APPNAME=merlin-api-dev
 NEWRELIC_IGNORESTATUSCODES=400,404
 
-IMG_BUILDER_CLUSTER_NAME=[*** PASTE k8s CLUSTER NAME ****]
-IMG_BUILDER_BUILD_CONTEXT_URI=[*** PASTE BUILD CONTEXT URI ****]
-IMG_BUILDER_PREDICTION_JOB_BUILD_CONTEXT_URI=[*** PASTE BUILD CONTEXT URI ****]
+# IMG_BUILDER_CLUSTER_NAME=
+# TODO: Set with GitHub path
+# IMG_BUILDER_BUILD_CONTEXT_URI=
+# IMG_BUILDER_PREDICTION_JOB_BUILD_CONTEXT_URI=
 IMG_BUILDER_PREDICTION_JOB_DOCKERFILE_PATH=docker/app.Dockerfile
 IMG_BUILDER_PREDICTION_JOB_BASE_IMAGE=ghcr.io/gojek/merlin-pyspark-base:v0.6.0
 IMG_BUILDER_NAMESPACE=mlp
 IMG_BUILDER_DOCKER_REGISTRY=ghcr.io/gojek
 IMG_BUILDER_TIMEOUT=10m
-IMG_BUILDER_GCP_PROJECT=[*** GCP PROJECT ****]
+# IMG_BUILDER_GCP_PROJECT=
 IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH="python/batch-predictor"
 IMG_BUILDER_CONTEXT_SUB_PATH="python/pyfunc-server"
 
-MODEL_CLUSTER_NAME=[*** PASTE k8s CLUSTER NAME FOR MODEL ****]
+# MODEL_CLUSTER_NAME=
 MODEL_DEPLOYMENT_TIMEOUT=10m
 
-VAULT_ADDRESS=[*** PASTE VAULT ADDRESS ****]
-VAULT_TOKEN=[*** PASTE VAULT TOKEN ****]
+# VAULT_ADDRESS=
+# VAULT_TOKEN=
 
 AUTHORIZATION_ENABLED=false
-ALERT_ENABLED=true
+ALERT_ENABLED=false
 MONITORING_DASHBOARD_ENABLED=true
+MONITORING_DASHBOARD_BASE_URL=http://monitoring.dev/model-dashboard
+MONITORING_DASHBOARD_JOB_BASE_URL=http://monitoring.dev/batch-job-dashboard
 
-GITLAB_BASE_URL=[*** PASTE GITLAB CONTEXT URI ****]
-GITLAB_TOKEN=[*** PASTE GITLAB TOKEN ****]
-GITLAB_DASHBOARD_REPOSITORY=[*** PASTE DASHBOARD REPOSITORY ****]
-GITLAB_DASHBOARD_BRANCH=[*** PASTE DASHBOARD BRANCH ****]
-GITLAB_ALERT_REPOSITORY=[*** PASTE ALERT REPOSITORY ****]
-GITLAB_ALERT_BRANCH=[*** PASTE ALERT BRANCH ****]
+# GITLAB_BASE_URL=
+# GITLAB_TOKEN=
+# GITLAB_DASHBOARD_REPOSITORY=
+# GITLAB_DASHBOARD_BRANCH=
+# GITLAB_ALERT_REPOSITORY=
+# GITLAB_ALERT_BRANCH=
 
-WARDEN_API_HOST=[*** PASTE HOST ****]
+# WARDEN_API_HOST=
 
-MLP_API_HOST=[*** PASTE HOST ****]
-MLP_API_ENCRYPTION_KEY=[*** PASTE ENCRYPTION KEY ****]
+# MLP_API_HOST=
+MLP_API_ENCRYPTION_KEY=password
