--- a/charts/merlin/Chart.yaml
+++ b/charts/merlin/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: Orchestrator service for Machine Learning Platform
+description: Kubernetes-friendly ML model management, deployment, and serving.
 name: merlin
-version: 0.6.0
+version: 0.7.0
