Add link to Python SDK on the main README. Remove artifactory usages

--- a/python/pyfunc-server/Pipfile
+++ b/python/pyfunc-server/Pipfile
@@ -5,7 +5,7 @@ verify_ssl = true
 
 [packages]
 pyfuncserver = {editable = true,extras = ["test"],path = "."}
-merlin-sdk = {version = "*",index = "artifactory"}
+merlin-sdk = "*"
 uvloop = "*"
 
 [requires]
