--- a/ui/.env.development
+++ b/ui/.env.development
@@ -1,5 +1,5 @@
 REACT_APP_MERLIN_API=http://localhost:8080/v1
-REACT_APP_MLP_API=http://localhost:8000/v1
+REACT_APP_MLP_API=http://console.d.ai.golabs.io/api/v1
 REACT_APP_HOMEPAGE=/merlin
 
 REACT_APP_ALERT_ENABLED=false
@@ -8,4 +8,4 @@ REACT_APP_MONITORING_DASHBOARD_ENABLED=false
 REACT_APP_OAUTH_CLIENT_ID=
 
 REACT_APP_MERLIN_DOCS_URL=https://github.com/gojek/merlin/tree/main/docs
-REACT_APP_DOCKER_REGISTRIES=ghcr.io/gojek
+REACT_APP_DOCKER_REGISTRIES=ghcr.io/gojek,gcr.io/kubeflow-ci
