Update API unit test

--- a/.env.sample
+++ b/.env.sample
@@ -16,7 +16,7 @@ NEWRELIC_ENABLED=false
 NEWRELIC_APPNAME=merlin-api-dev
 NEWRELIC_IGNORESTATUSCODES=400,404
 
-IMG_BUILDER_CLUSTER_NAME=d-gods-id-models
+# IMG_BUILDER_CLUSTER_NAME=
 # TODO: Set with GitHub path
 # IMG_BUILDER_BUILD_CONTEXT_URI=
 # IMG_BUILDER_PREDICTION_JOB_BUILD_CONTEXT_URI=
@@ -29,7 +29,7 @@ IMG_BUILDER_TIMEOUT=10m
 IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH="python/batch-predictor"
 IMG_BUILDER_CONTEXT_SUB_PATH="python/pyfunc-server"
 
-MODEL_CLUSTER_NAME=d-gods-id-models
+# MODEL_CLUSTER_NAME=
 MODEL_DEPLOYMENT_TIMEOUT=10m
 
 # VAULT_ADDRESS=
