--- a/ui/.env.development
+++ b/ui/.env.development
@@ -1,5 +1,5 @@
 REACT_APP_MERLIN_API=http://localhost:8080/v1
-REACT_APP_MLP_API=http://console.d.ai.golabs.io/api/v1
+REACT_APP_MLP_API=http://localhost:8000/v1
 REACT_APP_HOMEPAGE=/merlin
 
 REACT_APP_ALERT_ENABLED=false
