--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -14,7 +14,7 @@ merlin:
       memory: 1Gi
   service:
     externalPort: 8080
-    internalPort: 3000
+    internalPort: 8080
   ingress:
     enabled: false
 
@@ -22,6 +22,9 @@ merlin:
   homepage: /merlin
   apiHost: http://merlin.mlp/v1
   docsURL: ""
+
+  # Comma-separated value of Docker registries that can be chosen in deployment page
+  dockerRegistries: ghcr.io/gojek,ghcr.io/your-company
 
   mlpApi:
     apiHost: http://mlp.mlp:8080/v1
