Remove double quote when echo-ing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Check output
         env:
           VERSION: ${{ steps.get_version.outputs.version }}
-        run: echo "Version: ${VERSION}"
+        run: echo Version: ${VERSION}
 
   publish-python-sdk:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
