--- a/.github/workflows/release-e2e-test.yml
+++ b/.github/workflows/release-e2e-test.yml
@@ -1,5 +1,5 @@
 name: release-e2e-test
-on: [workflow_dispatch, pull_request]
+on: workflow_dispatch
 jobs:
   get-version:
     runs-on: ubuntu-latest
