--- a/.github/workflows/release-e2e-test.yml
+++ b/.github/workflows/release-e2e-test.yml
@@ -105,7 +105,7 @@ jobs:
 
   e2e-test:
     runs-on: ubuntu-latest
-    needs: publish-merlin-docker
+    needs: [get-version, publish-merlin-docker]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -137,8 +137,7 @@ jobs:
       - name: Deploy Merlin
         env:
           MERLIN_CHART_PATH: merlin/charts/merlin
-        run: |
-          export MERLIN_IMAGE_TAG=${{ needs.get-version.outputs.version }}
-          ./merlin/scripts/e2e/deploy-merlin.sh
+          MERLIN_IMAGE_TAG: ${{ needs.get-version.outputs.version }}
+        run: ./merlin/scripts/e2e/deploy-merlin.sh
       - name: Run E2E test
         run: ./merlin/scripts/e2e/run-e2e.sh "merlin/api"
