Run release & e2e test workflow on manual and push to tags

--- a/.github/workflows/release-e2e-test.yml
+++ b/.github/workflows/release-e2e-test.yml
@@ -1,5 +1,9 @@
 name: release-e2e-test
-on: [workflow_dispatch, pull_request]
+on:
+  workflow_dispatch:
+  push:
+    tags:
+      - "v*.*.*"
 jobs:
   get-version:
     runs-on: ubuntu-latest
