--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "lint-staged": "^9.5.0",
     "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
+    "prop-types": "^15.7.2",
     "typescript": "^3.9.2"
   },
   "lint-staged": {
