Add local installation document

--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -22,9 +22,9 @@ merlin:
     enabled: false
 
   environmentConfigs:
-  - name: e2e
+  - name: dev
     is_default: true
-    cluster: e2e
+    cluster: dev
     region: id
     gcp_project: gcp-project
     deployment_timeout: 10m
@@ -48,8 +48,7 @@ merlin:
       executor_memory_request: 128Mi
 
   imageBuilder:
-    clusterName: "e2e"
-
+    clusterName: "dev"
 
 postgresql:
   resources:
