Fix deployment template

--- a/charts/merlin/templates/deployment.yaml
+++ b/charts/merlin/templates/deployment.yaml
@@ -75,6 +75,8 @@ spec:
         env:
           - name: ENVIRONMENT
             value: "{{ .Values.merlin.environment }}"
+          - name: LOGGER_DESTINATION_URL
+            value: "{{ .Values.merlin.loggerDestinationURL }}"
           - name: PORT
             value: "{{ .Values.merlin.service.internalPort }}"
           - name: DATABASE_HOST
@@ -203,8 +205,6 @@ spec:
             value: "{{ .Values.merlin.alert.gitlab.alertBranch }}"
           - name: WARDEN_API_HOST
             value: "{{ .Values.merlin.alert.warden.apiHost }}"
-          - name: LOGGER_DESTINATION_URL
-            valuue: "{{ .Values.merlin.loggerDestinationURL }}"
           {{- end }}
           - name: MLP_API_HOST
             value: "{{ .Values.merlin.mlpApi.apiHost }}"
