Request/Response logging (#45)
* Add Logger implementation

* Update generated client and sdk

* Fix type check error

* Return empty logger when logger is not there

* Add unit test for logger

* Fix deployment template

* Add scanner and valuer for logger object

* Rename method name to reflect its purpose

--- a/charts/merlin/templates/deployment.yaml
+++ b/charts/merlin/templates/deployment.yaml
@@ -75,6 +75,8 @@ spec:
         env:
           - name: ENVIRONMENT
             value: "{{ .Values.merlin.environment }}"
+          - name: LOGGER_DESTINATION_URL
+            value: "{{ .Values.merlin.loggerDestinationURL }}"
           - name: PORT
             value: "{{ .Values.merlin.service.internalPort }}"
           - name: DATABASE_HOST
