--- a/python/sdk/test/batch/model/env.yaml
+++ b/python/sdk/test/batch/model/env.yaml
@@ -1,7 +1,11 @@
 dependencies:
-- pip:
-  - scikit-learn==0.20.3
-  - joblib==0.13.0
-  - pandas==0.25.3
-  - pytest
-  - pytest-xdist
+  - pip:
+      - scikit-learn==0.20.3
+      - joblib==0.13.0
+      - pandas==0.25.3
+      - pytest
+      - pytest-xdist
+      - google-cloud-bigquery==1.22.0
+      - google-cloud-bigquery-storage==0.7.0
+      - grpcio==1.22.0
+      - protobuf==3.9.0
