--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,20 +54,20 @@ jobs:
   unit-test-python-sdk:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Install dependencies
-      working-directory: ./python/sdk
-      run: |
-        pip install mypy pipenv
-        make setup
-    - name: Unit test Python SDK
-      env:
-        E2E_USE_GOOGLE_OAUTH: false
-      working-directory: ./python/sdk
-      run: make unit-test
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        working-directory: ./python/sdk
+        run: |
+          pip install mypy pipenv
+          make setup
+      - name: Unit test Python SDK
+        env:
+          E2E_USE_GOOGLE_OAUTH: false
+        working-directory: ./python/sdk
+        run: make unit-test
 
   integration-test-api:
     runs-on: ubuntu-latest
@@ -156,7 +156,7 @@ jobs:
           password: ${{ secrets.GHCR_TOKEN }}
           registry: ghcr.io
           repository: gojek/merlin-pyspark-base
-          path: python/batch-predictor
+          path: python
           dockerfile: python/batch-predictor/docker/base.Dockerfile
           tag_with_ref: true
 
