--- a/charts/merlin/templates/deployment.yaml
+++ b/charts/merlin/templates/deployment.yaml
@@ -140,6 +140,12 @@ spec:
           - name: IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.predictionJobContextSubPath }}"
           {{- end }}
+          - name: FEAST_SERVING_URL
+            value: "{{ .Values.merlin.transformer.feast.servingURL }}"
+          - name: FEAST_CORE_URL
+            value: "{{ .Values.merlin.transformer.feast.coreURL }}"
+          - name: STANDARD_TRANSFORMER_IMAGE_NAME
+            value: "{{ .Values.merlin.transformer.image }}"
           - name: VAULT_ADDRESS
             valueFrom:
               secretKeyRef:
