Feast Transformer implementation

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -1,3 +1,5 @@
+LOG_LEVEL=DEBUG
+
 STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{"feast":[{"project":"default","entities":[{"name":"driver_id","valueType":"string","jsonPath":"driver_id"}],"features":[{"name":"driver_trips:average_daily_rides","defaultValue":0},{"name":"driver_trips:maximum_daily_rides","defaultValue":0}]}]}}
 
 MERLIN_TRANSFORMER_MODEL_NAME=model
