Handle feast serving url correctly

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -6,5 +6,4 @@ MERLIN_TRANSFORMER_MODEL_NAME=model
 MERLIN_TRANSFORMER_MODEL_PREDICT_URL=http://localhost:8081/v1/models/model:predict
 MERLIN_TRANSFORMER_PORT=8080
 
-FEAST_SERVING_ADDRESS=localhost
-FEAST_SERVING_PORT=6566
+FEAST_SERVING_URL=localhost:6566
