--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -1,8 +1,9 @@
-STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{"feast":[{"project":"default","entities":[{"name":"driver_id","valueType":"string","jsonPath":"driver_id"}],"features":[{"name":"driver_trips:average_daily_rides","defaultValue":0},{"name":"driver_trips:maximum_daily_rides","defaultValue":0}]}]}}
+LOG_LEVEL=DEBUG
+
+STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{"feast":[{"project":"default","entities":[{"name":"driver_id","valueType":"STRING","jsonPath":"$$.driver_id"}],"features":[{"name":"driver_statistics:avg_daily_trips_3","defaultValue":0},{"name":"driver_statistics:conv_rate","defaultValue":0}]}]}}
 
 MERLIN_TRANSFORMER_MODEL_NAME=model
 MERLIN_TRANSFORMER_MODEL_PREDICT_URL=http://localhost:8081/v1/models/model:predict
 MERLIN_TRANSFORMER_PORT=8080
 
-FEAST_SERVING_ADDRESS=localhost
-FEAST_SERVING_PORT=6566
+FEAST_SERVING_URL=localhost:6566
