--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -7,3 +7,5 @@ MERLIN_TRANSFORMER_MODEL_PREDICT_URL=http://localhost:8081/v1/models/model:predi
 MERLIN_TRANSFORMER_PORT=8080
 
 FEAST_SERVING_URL=localhost:6566
+FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
+FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
