Update .env.sample for transformer

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -1,6 +1,6 @@
 LOG_LEVEL=DEBUG
 
-STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{"feast":[{"project":"default","entities":[{"name":"driver_id","valueType":"STRING","jsonPath":"driver_id"}],"features":[{"name":"driver_statistics:avg_daily_trips_3","valueType":"STRING","defaultValue":"0"},{"name":"driver_statistics:conv_rate","valueType":"STRING","defaultValue":"0"}]}]}}
+STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{"feast":[{"project":"default","entities":[{"name":"driver_id","valueType":"STRING","jsonPath":"$$.driver_id"}],"features":[{"name":"driver_statistics:avg_daily_trips_3","valueType":"STRING","defaultValue":"0"},{"name":"driver_statistics:conv_rate","valueType":"STRING","defaultValue":"0"}]}]}}
 
 MERLIN_TRANSFORMER_MODEL_NAME=model
 MERLIN_TRANSFORMER_MODEL_PREDICT_URL=http://localhost:8081/v1/models/model:predict
