--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -33,6 +33,9 @@ merlin:
     # encryptionKey must be specified using --set flag.
     # encryptionKey:
 
+  feastApi:
+    apiHost: http://feast.mlp:8080/v1
+
   imageBuilder:
     clusterName: "dev"
     buildContextURI: "git://TOKEN@github.com/gojek/merlin.git#refs/tags/v0.1"
