Standard Transformer UI (#59)
* Standard transformer deployment UI component

- User can specify request enrichments
- On each enrichment user can specify Feast project, entities, features
- Calls Feast API to get available projects, entities, features

* Update model version details page for standard transformer

* Add REACT_APP_FEAST_API config

* Clean up testing code

* Enable resources and env vars settings on standard transformer

* Add const for standard transformer config name - for consistency

* Set default valueType for feast feature to STRING

* Do not set default value type for feast

--- a/charts/merlin/templates/deployment.yaml
+++ b/charts/merlin/templates/deployment.yaml
@@ -110,6 +110,8 @@ spec:
             value: "{{ .Values.merlin.apiHost }}"
           - name: REACT_APP_MLP_API
             value: "{{ .Values.merlin.mlpApi.apiHost }}"
+          - name: REACT_APP_FEAST_CORE_API
+            value: "{{ .Values.merlin.feastCoreApi.apiHost }}"
           - name: REACT_APP_DOCKER_REGISTRIES
             value: "{{ .Values.merlin.dockerRegistries }}"
           - name: IMG_BUILDER_CLUSTER_NAME
