--- a/python/sdk/test/batch/model/env.yaml
+++ b/python/sdk/test/batch/model/env.yaml
@@ -2,6 +2,7 @@ dependencies:
   - pip:
       - scikit-learn==0.20.3
       - joblib==0.13.0
+      - numpy==1.19.5 # https://github.com/Azure/MachineLearningNotebooks/issues/1314
       - pandas==0.25.3
       - pytest
       - pytest-xdist
