--- a/python/sdk/test/transformer/standard_transformer_input.yaml
+++ b/python/sdk/test/transformer/standard_transformer_input.yaml
@@ -7,8 +7,8 @@ transformerConfig:
       project: default
       features:
       - name: driver_statistics:avg_daily_trips_3
-        valueType: STRING
+        valueType: INT32
         defaultValue: '0'
       - name: driver_statistics:conv_rate
-        valueType: STRING
+        valueType: FLOAT
         defaultValue: '0'
