Standard Transformer (Feast enrichment) (#57)
* Skeleton for Feast Transformer (#49)

* Restructure transformer and its protos (#50)

* Standard Transformer API Implementation (#51)

* Restructure transformer and its protos

* Add standard transformer implementation and handling of default transformer resource request

* Update helm chart for transformer (#52)

* Restructure transformer and its protos

* Add standard transformer implementation and handling of default transformer resource request

* Update helm chart and reduce configuration

* Remove cpu_limit and memory_limit from values.yaml

* Standard Transformer Config Validation (#54)

* Restructure transformer and its protos

* Add standard transformer implementation and handling of default transformer resource request

* Update helm chart and reduce configuration

* Remove cpu_limit and memory_limit from values.yaml

* Add transformer config validation

* Supress non validation error

* Return 4XX and 5XX accordingly

* Use existing context variable

* Feast Transformer implementation (#53)

* Feast Transformer implementation

* Add more test

* Properly handle entity extraction

* Rename mock file

* Use constant for feast json field

* Propagate merlin log id to model

* Remove unnecesary test

* Use the correct feast client version

* Update go.sum

* Add server termination handler

* Handle feast serving url correctly

* Fix incorrect sample transformer config

* Handle error correctly

* Disable verbose log while testing

* Fix compile error

* Fix invalid transformer config

* Handle different feature value type

* Use nil slice declaration

* Handle different entity correctly

* Add test for multiple entities and missing value

* Assert expectation

* Parallelize call

* Add non success test in server_test.go

* Add additional test case

Co-authored-by: Pradithya Aria <pradithya.pura@go-jek.com>

* Use docker ENT

--- a/charts/merlin/templates/deployment.yaml
+++ b/charts/merlin/templates/deployment.yaml
@@ -110,6 +110,8 @@ spec:
             value: "{{ .Values.merlin.apiHost }}"
           - name: REACT_APP_MLP_API
             value: "{{ .Values.merlin.mlpApi.apiHost }}"
+          - name: REACT_APP_FEAST_CORE_API
+            value: "{{ .Values.merlin.feastCoreApi.apiHost }}"
           - name: REACT_APP_DOCKER_REGISTRIES
             value: "{{ .Values.merlin.dockerRegistries }}"
           - name: IMG_BUILDER_CLUSTER_NAME
@@ -140,6 +142,12 @@ spec:
           - name: IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.predictionJobContextSubPath }}"
           {{- end }}
+          - name: FEAST_SERVING_URL
+            value: "{{ .Values.merlin.transformer.feast.servingURL }}"
+          - name: FEAST_CORE_URL
+            value: "{{ .Values.merlin.transformer.feast.coreURL }}"
+          - name: STANDARD_TRANSFORMER_IMAGE_NAME
+            value: "{{ .Values.merlin.transformer.image }}"
           - name: VAULT_ADDRESS
             valueFrom:
               secretKeyRef:
