--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -9,3 +9,5 @@ MERLIN_TRANSFORMER_PORT=8080
 FEAST_SERVING_URL=localhost:6566
 FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
+
+HTTP_SERVER_TIMEOUT=30s
