Add jaeger tracing

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -11,3 +11,8 @@ FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
 
 HTTP_SERVER_TIMEOUT=30s
+
+JAEGER_AGENT_HOST=localhost
+JAEGER_AGENT_PORT=6831
+JAEGER_SAMPLER_TYPE=const
+JAEGER_SAMPLER_PARAM=1
